# python_iot_ml_demo

./: README.md  predicted_vs_actual.csv  pyproject.toml
data/: kttno_2010.csv  kttno_2011.csv  kttno_2012.csv  kttno_2013.csv  kttno_2014.csv  kttno_2015.csv  kttno_2016.csv  kttno_2017.csv  kttno_2018.csv  kttno_2019.csv  kttno_2020.csv  kttno_2021.csv  kttno_2022.csv  kttno_2023.csv
model/: iso_forest_model.pkl
src/python_iot_ml_demo/: 01_create_isolationforest_model.py  02_use_isolationforest_model.py  03_create_prophet_model.py  04_use_prophet_model.py  05_create_decisiontree_model.py  06_use_decisiontree_model.py
test_data/: kttno_2024.csv
