[project]
name = "python-iot-ml-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Ganesh Chandrasekaran",email = "gchandra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "python_iot_ml_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
